[auto] BAM-39: maintenance ledger (tasks, service intervals, repeat HMS)
